--- a/20180728/config_log4cpp/log4cpp.config
+++ b/20180728/config_log4cpp/log4cpp.config
@@ -1,12 +1,12 @@
 
 #仅一个Category
 
-log4cpp.rootCategory=INFO,rollAppender
+log4cpp.rootCategory=INFO,osAppender,rollAppender
 
 #osAppender属性
-#log4cpp.appender.osAppender=ostreamAppender
-#log4cpp.appender.osAppender.layout=PatternLayout
-#log4cpp.appender.osAppender.layout.ConversionPattern=%d: %p %c %x: %m%n
+log4cpp.appender.osAppender=ConsoleAppender
+log4cpp.appender.osAppender.layout=PatternLayout
+log4cpp.appender.osAppender.layout.ConversionPattern=%d: %p %c %x: %m%n
 
 #rollAppender属性
 log4cpp.appender.rollAppender=RollingFileAppender 
